# tennis-analytics

./: .coverage.Host-001_lan.pid98401.XGzqztVx.c  .cursorrules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily_ingest.yml
.streamlit/: config.toml
app/: Home.py
app/components/: _bootstrap.py  plotly_theme.py  queries.py  widgets.py
app/pages/: 1_Joueurs.py  2_Face_a_Face.py  3_Tournois.py  4_Classements_Elo.py  5_Predictions.py  6_Insights.py  7_Definition_Elo.py  8_Top_20.py  8_Top_20_actuel.py  9_Profils_et_Styles.py
data/processed/: elo_latest.parquet  players.parquet
data/processed/models/: logreg_calibrated.joblib
src/analytics/: __init__.py
src/db/: __init__.py  duckdb_session.py
src/ingestion/: __init__.py  cli.py  sackmann_loader.py  schemas.py
src/modeling/: __init__.py  win_probability.py
src/ratings/: __init__.py  elo.py
src/transformation/: __init__.py  build_elo.py  build_model.py  pipeline.py  rebuild_processed.py
tests/: conftest.py  test_circuit_filter.py  test_elo.py  test_ingestion_robustness.py  test_pipeline_uid.py  test_schemas.py  test_train_no_leakage.py  test_transformation.py  test_win_probability.py
