[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-analytics"
version = "0.1.0"
description = "Plateforme d'analytics tennis ATP/WTA : stats, ratings Elo et prédictions ML."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "François B." }]
keywords = ["tennis", "streamlit", "duckdb", "elo", "machine-learning"]
dependencies = [
    "duckdb==1.1.3",
    "joblib==1.4.2",
    "loguru==0.7.2",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pandera==0.21.1",
    "plotly==5.24.1",
    "pyarrow==18.0.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "scikit-learn==1.5.2",
    "streamlit==1.40.1",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.7.4",
]

[project.scripts]
tennis-ingest = "ingestion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "PTH", "RUF", "BLE"]
ignore = ["BLE001", "C408"]

[tool.ruff.lint.per-file-ignores]
"app/Home.py" = ["E402"]
"app/pages/**/*.py" = ["E402"]
"tests/**/*.py" = ["S101"]
"src/modeling/win_probability.py" = ["N803", "N806"]

[tool.black]
line-length = 100
target-version = ["py311"]
